// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffHunk renders a unified diff view for the given diff hunk 1`] = `
Array [
  <tr
    className="diff-boundary"
  >
    <td
      className="diff-boundary__num diff-hunk__num--both"
      colSpan={2}
    />
    <td
      className="diff-boundary__content diff-hunk__content"
    >
      <code>
        @@ -
        159
        ,
        7
         +
        159
        ,
        7
         
        @@ export async function register({
      </code>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="base"
      id="anchor_L159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="head"
      id="anchor_R159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const subscriptions = new Subscription()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="base"
      id="anchor_L160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="head"
      id="anchor_R160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const decorationType = sourcegraph.app.createDecorationType()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="base"
      id="anchor_L161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="head"
      id="anchor_R161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const connection = await createConnection()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line  diff-hunk__line--deletion  "
  >
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="base"
      id="anchor_L162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to TypeScript backend opened\`)",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line   diff-hunk__line--addition "
  >
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="head"
      id="anchor_R162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to language server opened\`)",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="base"
      id="anchor_L163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="head"
      id="anchor_R163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        subscriptions.add(",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="base"
      id="anchor_L164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="head"
      id="anchor_R164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) => {",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="base"
      id="anchor_L165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="head"
      id="anchor_R165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                    const method = LSP_TO_LOG_LEVEL[type]",
          }
        }
      />
    </td>
  </tr>,
]
`;

exports[`DiffHunk renders dark theme decorations if dark theme is active 1`] = `
Array [
  <tr
    className="diff-boundary"
  >
    <td
      className="diff-boundary__num diff-hunk__num--both"
      colSpan={2}
    />
    <td
      className="diff-boundary__content diff-hunk__content"
    >
      <code>
        @@ -
        159
        ,
        7
         +
        159
        ,
        7
         
        @@ export async function register({
      </code>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="base"
      id="anchor_L159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="head"
      id="anchor_R159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={
        Object {
          "backgroundColor": "red",
          "border": "1px blue solid",
        }
      }
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const subscriptions = new Subscription()",
          }
        }
      />
       
      <span
        className=""
        data-tooltip="base hover msg"
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      >
        head content
      </span>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="base"
      id="anchor_L160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="head"
      id="anchor_R160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const decorationType = sourcegraph.app.createDecorationType()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="base"
      id="anchor_L161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="head"
      id="anchor_R161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const connection = await createConnection()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line  diff-hunk__line--deletion  "
  >
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="base"
      id="anchor_L162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__content"
      style={
        Object {
          "backgroundColor": "blue",
          "border": "1px blue solid",
        }
      }
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to TypeScript backend opened\`)",
          }
        }
      />
       
      <span
        className=""
        data-tooltip="base hover msg"
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      >
        base content
      </span>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line   diff-hunk__line--addition "
  >
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="head"
      id="anchor_R162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to language server opened\`)",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="base"
      id="anchor_L163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="head"
      id="anchor_R163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        subscriptions.add(",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="base"
      id="anchor_L164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="head"
      id="anchor_R164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) => {",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="base"
      id="anchor_L165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="head"
      id="anchor_R165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                    const method = LSP_TO_LOG_LEVEL[type]",
          }
        }
      />
    </td>
  </tr>,
]
`;

exports[`DiffHunk renders decorations if given 1`] = `
Array [
  <tr
    className="diff-boundary"
  >
    <td
      className="diff-boundary__num diff-hunk__num--both"
      colSpan={2}
    />
    <td
      className="diff-boundary__content diff-hunk__content"
    >
      <code>
        @@ -
        159
        ,
        7
         +
        159
        ,
        7
         
        @@ export async function register({
      </code>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="base"
      id="anchor_L159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={159}
      data-part="head"
      id="anchor_R159"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const subscriptions = new Subscription()",
          }
        }
      />
       
      <span
        className=""
        data-tooltip="base hover msg"
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      >
        head content
      </span>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="base"
      id="anchor_L160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={160}
      data-part="head"
      id="anchor_R160"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const decorationType = sourcegraph.app.createDecorationType()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="base"
      id="anchor_L161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={161}
      data-part="head"
      id="anchor_R161"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        const connection = await createConnection()",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line  diff-hunk__line--deletion  "
  >
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="base"
      id="anchor_L162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__content"
      style={
        Object {
          "backgroundColor": "blue",
        }
      }
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to TypeScript backend opened\`)",
          }
        }
      />
       
      <span
        className=""
        data-tooltip="base hover msg"
        style={
          Object {
            "backgroundColor": "black",
          }
        }
      >
        base content
      </span>
    </td>
  </tr>,
  <tr
    className="diff-hunk__line   diff-hunk__line--addition "
  >
    <td
      className="diff-hunk__num diff-hunk__num--empty"
    />
    <td
      className="diff-hunk__num"
      data-line={162}
      data-part="head"
      id="anchor_R162"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        logger.log(\`WebSocket connection to language server opened\`)",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="base"
      id="anchor_L163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={163}
      data-part="head"
      id="anchor_R163"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "        subscriptions.add(",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="base"
      id="anchor_L164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={164}
      data-part="head"
      id="anchor_R164"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                connection.observeNotification(LogMessageNotification.type).subscribe(({ type, message }) => {",
          }
        }
      />
    </td>
  </tr>,
  <tr
    className="diff-hunk__line diff-hunk__line--both   "
  >
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="base"
      id="anchor_L165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__num"
      data-line={165}
      data-part="head"
      id="anchor_R165"
      onClick={[Function]}
    />
    <td
      className="diff-hunk__content"
      style={Object {}}
    >
      <div
        className="d-inline-block"
        dangerouslySetInnerHTML={
          Object {
            "__html": "                    const method = LSP_TO_LOG_LEVEL[type]",
          }
        }
      />
    </td>
  </tr>,
]
`;
